# AutoStarRail

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
AutoStarRail/: CMakeLists.txt
AutoStarRail/AdditionalTest/: AsrPtrTest.cpp  BoostUrlTest.cpp
AutoStarRail/Core/: CMakeLists.txt
AutoStarRail/Core/Core/src/: Core.cpp
AutoStarRail/Core/Exceptions/include/AutoStarRail/Core/Exceptions/: Config.h  InterfaceNotFoundException.h  InvalidGuidStringException.h  PythonException.h
AutoStarRail/Core/Exceptions/src/: InterfaceNotFoundException.cpp  InvalidGuidStringException.cpp
AutoStarRail/Core/ForeignInterfaceHost/include/AutoStarRail/Core/ForeignInterfaceHost/: AsrGuid.h  AsrStringImpl.h  Config.h  CppSwigInterop.h  IsCastAvailableImpl.hpp  QueryInterfaceImpl.hpp
AutoStarRail/Core/ForeignInterfaceHost/src/: AsrGuid.cpp  AsrStringImpl.cpp  CppHost.cpp  CppHost.h  CppSwigInterop.cpp  ForeignInterfaceHost.cpp  ForeignInterfaceHost.h  ForeignInterfaceHostEnum.h  IAsrBase.cpp  IForeignLanguageRuntime.cpp  IForeignLanguageRuntime.h  JavaHost.cpp  JavaHost.h  Plugin.cpp  Plugin.h  PluginFileManager.cpp  PluginFileManager.h  PluginManager.cpp  PluginManager.h  PythonHost.cpp  PythonHost.h
AutoStarRail/Core/ForeignInterfaceHost/test/: PluginDescTest.cpp
AutoStarRail/Core/GlobalSettingsManager/include/AutoStarRail/Core/GlobalSettingManager/: Config.h
AutoStarRail/Core/GlobalSettingsManager/src/: GlobalSettingsManager.cpp
AutoStarRail/Core/Impl/include/AutoStarRail/Core/Impl/: AsrOrt.h  Config.h
AutoStarRail/Core/Impl/src/: AsrOrt.cpp  PPOcr.cpp
AutoStarRail/Core/Logger/include/AutoStarRail/Core/Logger/: Logger.h
AutoStarRail/Core/Logger/src/: AsrLogger.cpp  Logger.cpp
AutoStarRail/Core/Utils/src/: PlaceHolder.cpp
AutoStarRail/Core/i18n/include/AutoStarRail/Core/i18n/: AsrResultTranslator.h  i18n.h
AutoStarRail/Core/i18n/src/: AsrResultTranslator.cpp  i18n.cpp
AutoStarRail/Plugins/: CMakeLists.txt
AutoStarRail/Plugins/AdbCapture/src/: AdbCapture.cpp  AdbCaptureFactorImpl.h  AdbCaptureFactoryImpl.cpp  AdbCaptureFactoryImpl.h  AdbCaptureImpl.cpp  AdbCaptureImpl.h  DllMain.cpp  ErrorLensImpl.cpp  ErrorLensImpl.h  PluginImpl.cpp  PluginImpl.h
AutoStarRail/Qt5Gui/: CMakeLists.txt
AutoStarRail/Qt5Gui/Qt5Gui/src/: AsrQt5GuiConfig.h  GlobalVariables.cpp  GlobalVariables.h  main.cpp
AutoStarRail/Qt5Gui/Resources/: AsrQmlResource.qrc
AutoStarRail/Utils/include/AutoStarRail/Utils/: Config.h  EnumUtils.hpp  Expected.h  IAsrBaseAdapterUtils.h  QueryInterfaceImpl.hpp  StreamUtils.hpp  StringUtils.h  UnexpectedEnumException.h  Utils.hpp  fmt.h
AutoStarRail/Utils/src/: Expected.cpp  StringUtils.cpp  UnexpectedEnumException.cpp
SWIG/: ExportAll.i
cmake/: AsrBoostContext182Patch.cmake  AsrCheckStdFmt.cmake  AsrClearLibPrefix.cmake  AsrQtUtils.cmake  AsrRemoveSwigOutput.cmake  AsrResetLibPrefix.cmake  AsrSetLibPrefix.cmake  AsrSetLibPrefixAsDefaultValue.cmake  AsrSetOutputPath.cmake  AsrUtils.cmake  CTestCustom.cmake  CompileLua.cmake  FindZLIB.cmake
cmake/CppTestSource/: StdFormatTest.cpp
include/AutoStarRail/: AsrConfig.h  AsrExport.h  AsrGuidHolder.h  AsrPtr.hpp  AsrString.hpp  IAsrBase.h
include/AutoStarRail/ExportInterface/: AsrLogger.h  IAsrImage.h  IAsrOcr.h  IAsrPluginManager.h  IAsrSettings.h  IAsrTaskManager.h
include/AutoStarRail/PluginInterface/: IAsrCapture.h  IAsrErrorLens.h  IAsrPlugin.h  IAsrTask.h
